--- a/frontend/src/pages/authentication/authStyle.css
+++ b/frontend/src/pages/authentication/authStyle.css
@@ -1,8 +1,7 @@
-/* LoginForm.css */
 
 .homeStyle {
     display: flex;
-    margin: 50px 125px 10px 115px;
+    margin: 50px 125px 10px 140px;
 }
 
 .backStyle {
@@ -29,7 +28,6 @@
     height: 90vh;
     max-width: 330px;
     max-height: 800px;
-    margin-top: 50px;
     margin-left: 590px;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -45,22 +43,25 @@
     color: #ffffff;
     display: inline-block;
     margin-bottom: 0;
+    margin-left: 35px;
     vertical-align: middle;
 }
 
 .form-container input[type="password"],
 .form-container input[type="text"]{
-    width: 90%;
+    width: 80%;
     padding: 10px;
     margin-bottom: 20px;
+    margin-left: 35px;
     border: 1px solid #cccccc;
     border-radius: 5px;
 }
 
 
 .form-container button {
-    width: 100%;
+    width: 60%;
     padding: 10px;
+    margin-left: 69px;
     background-color: #3498db;
     color: #ffffff;
     border: none;
@@ -85,8 +86,8 @@
 
 .image-overlay {
     position: absolute;
-    top: 0;
-    left: 600px;
+    top: 20px;
+    left: 590px;
     z-index: 2; /* Ensure the image appears above the text */
     width: 21%; /* Adjust width as needed */
     height: 40%; /* Adjust height as needed */
