--- a/frontend/src/components/getEvent/GetEvent.css
+++ b/frontend/src/components/getEvent/GetEvent.css
@@ -1,7 +1,23 @@
-.event-title {
-    text-align: center;
+.event-title-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 55px;
     height: 40px;
+}
+
+.event-title{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 15ch;
+}
+
+.event-description {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .container {
@@ -77,6 +93,7 @@
     justify-content: flex-start;
     margin-left: 15px;
     margin-bottom: 10px;
+    max-width: 310px;
     color: white;
     align-items: center;
 }
@@ -88,6 +105,10 @@
 
 .info-value {
     margin-left: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 25ch;
 }
 
 .participant-container {
@@ -111,21 +132,32 @@
     transform: scale(1.05); /* Increase the size of the card */
 }
 
-.participant-task {
-    color: #6893ad;
-}
-
-.organizer {
-    display: none;
-    color: #ad2d2d;
-}
-
 .participant-container:hover .organizerName {
     color: #ad2d2d;
 }
 
 .participant-container:hover .organizer {
     display: block;
+}
+
+.participant-task {
+    color: #6893ad;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 10ch;
+}
+
+.participant-item {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 15ch;
+}
+
+.organizer {
+    display: none;
+    color: #ad2d2d;
 }
 
 .plus_img {
@@ -260,6 +292,53 @@
     transform: translateY(4px);
 }
 
+.leave-button {
+    align-items: center;
+    appearance: none;
+    background-color: #ec6868;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #6e0808 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono",monospace;
+    height: 48px;
+    width: 160px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 50px;
+    padding-right: 50px;
+    top: 450px;
+    position: fixed;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .25s ease;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 18px;
+    margin-top: 30px;
+}
+
+.leave-button:focus {
+    box-shadow: #e10000 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #e10000 0 -3px 0 inset;
+}
+
+.leave-button:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #e10000 0 -3px 0 inset;
+    transform: translateY(-4px);
+}
+
+.leave-button:active {
+    box-shadow: #e10000 0 3px 7px inset;
+    transform: translateY(4px);
+}
 
 .buttons-container {
     display: flex;
