--- a/frontend/src/components/searchEvents/SearchEvents.css
+++ b/frontend/src/components/searchEvents/SearchEvents.css
@@ -98,3 +98,18 @@
     width: 45px;
     margin-right: 5px;
 }
+
+.search-event-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-event-title {
+    font-size: 30px;
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 10ch;
+}
