--- a/frontend/src/components/searchEvents/createEvent/EventForm.css
+++ b/frontend/src/components/searchEvents/createEvent/EventForm.css
@@ -30,7 +30,7 @@
     border: 1px solid #ddd;
 }
 
-.event-form button {
+.event-form-button {
     padding: 10px;
     border-radius: 5px;
     border: none;
